force-app/main/default/objects/Retail_Product__c/Retail_Product__c.object-meta.xml
<CustomObject>
    <label>Retail Product</label>
    <nameField>
        <label>Retail Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>