force-app/main/default/objects/Retail_Product__c/validationRules/No_Negative_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Negative_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &lt; 0</errorConditionFormula>
    <errorMessage>Price cannot be negative.</errorMessage>
</ValidationRule>