force-app/main/default/objects/Retail_Product__c/validationRules/No_Negative_Reorder_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Negative_Reorder_Level</fullName>
    <active>true</active>
    <errorConditionFormula>Reorder_Level__c &lt; 0</errorConditionFormula>
    <errorMessage>Reorder Level cannot be negative.</errorMessage>
</ValidationRule>