force-app/main/default/objects/Retail_Product__c/validationRules/No_Negative_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Negative_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Stock__c &lt; 0</errorConditionFormula>
    <errorMessage>Stock cannot be negative.</errorMessage>
</ValidationRule>